--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "cypress": "^15.7.0",
     "cypress-iframe": "^1.0.1",
+    "cypress-mochawesome-reporter": "^4.0.2",
     "iframe": "^1.0.0"
   }
 }
